Bird list overflow scrolling works correctly

--- a/game.css
+++ b/game.css
@@ -18,8 +18,13 @@
 #white-container {
     background-color: white;
     flex-grow: 1;
-    padding: 16px;
+    padding: 16px 16px 0 16px;
     box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+
+    /* this helps somehow with the bird list overflow scrolling */
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
 }
 
 
@@ -52,7 +57,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-top: 10px;
+    padding: 10px 0 10px 0;
     overflow-y: auto;
 }
 
